src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInterop_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInterop_StringErrorContext.class */
public final class WGLNVDXInterop_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("wglDXSetResourceShareHandleNV(JJ)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXOpenDeviceNV(J)J", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXCloseDeviceNV(J)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXRegisterObjectNV(JJIII)J", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXUnregisterObjectNV(JJ)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXObjectAccessNV(JI)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("nwglDXLockObjectsNV(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXLockObjectsNV(JLorg/lwjgl/PointerBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("nwglDXUnlockObjectsNV(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        methods.put("wglDXUnlockObjectsNV(JLorg/lwjgl/PointerBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVDXInteropErrorContext");
        return methods;
    }
}
